test/libsolidity/syntaxTests/parsing/import_empty.sol
import "";
// ----
// ParserError: (9-10): Import path cannot be empty.
